--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">TestContactProject</string>
+
+    <string name="connection_error">Check you internet connection</string>
+    <string name="something_wrong">Something went wrong</string>
+    <string name="email">Email</string>
+    <string name="name">Name</string>
+    <string name="number">Number</string>
+    <string name="surname">Surname</string>
+
 </resources>
